# harness-kit

./: .gitignore  README.md  justfile  pyproject.toml
.github/: dependabot.yml
src/harness_kit/: __init__.py  cli.py  manifests.py
tests/: test_cli.py  test_manifests.py
